# daily-gadget-scout

./: .gitignore  AGENTS.md  pyproject.toml
config/: agent-internet-allowlist.md  cloud-task-prompt.md  codex-automation-prompt.md  sources.json
docs/: cloud-environment.md
docs/superpowers/plans/: 2026-06-23-daily-gadget-scout-implementation.md
docs/superpowers/specs/: 2026-06-23-daily-gadget-scout-design.md
scripts/: codex-cloud-setup.sh
src/gadget_scout/: __init__.py  briefing.py  cli.py  dedupe.py  models.py  scoring.py  selection.py  sources.py  wecom.py
tests/: test_briefing.py  test_cli.py  test_scoring.py  test_selection.py  test_wecom.py
tests/fixtures/: candidates.json
